--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -313,6 +313,18 @@ body[data-bs-theme="dark"] {
   width: 80px;
 }
 
+#panel-detalle-usuario {
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 0.4s ease;
+}
+
+#panel-detalle-usuario.abierto {
+  max-height: 1000px;
+  /* ajusta según el contenido máximo esperado */
+}
+
+
 
 
 
