--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -332,6 +332,18 @@ body[data-bs-theme="dark"] {
   background-color: #d4edc9;
   /* un verde pistache clarito */
 }
+.equipo-detalle {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease;
+    padding: 0 1rem;
+}
+
+.equipo-detalle.abierto {
+    max-height: 500px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
 
 
 
